[gd_scene load_steps=21 format=3 uid="uid://d31pe1fh1tsn4"]

[ext_resource type="Script" path="res://scripts/opening_cutscene.gd" id="1_rdbbq"]
[ext_resource type="MeshLibrary" uid="uid://hmxaqws5yf02" path="res://assets/tilesets/extended-tileset.tres" id="2_imyo1"]
[ext_resource type="PackedScene" path="res://scenes/light.tscn" id="3_yyurr"]
[ext_resource type="PackedScene" path="res://scenes/rock_small.tscn" id="4_eblk8"]
[ext_resource type="PackedScene" uid="uid://dftq2a7t3hk20" path="res://scenes/rock_medium.tscn" id="5_s85qx"]
[ext_resource type="AudioStream" uid="uid://b5tat2brl238x" path="res://assets/soundeffects/Openingvideo.mp3" id="6_decgf"]
[ext_resource type="Shader" path="res://shaders/dither.gdshader" id="7_fixyo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tlgdr"]
size = Vector3(4.32666, 0.499512, 12.2728)

[sub_resource type="BoxShape3D" id="BoxShape3D_fai6q"]
size = Vector3(4.32666, 0.499512, 4.6119)

[sub_resource type="BoxShape3D" id="BoxShape3D_f8i6y"]
size = Vector3(1.14307, 2.5632, 9.80267)

[sub_resource type="BoxShape3D" id="BoxShape3D_1fgci"]
size = Vector3(6.62451, 2.5632, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_238e8"]
size = Vector3(12.6105, 2.5632, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_i8atr"]
size = Vector3(1, 5.04254, 2.65295)

[sub_resource type="BoxShape3D" id="BoxShape3D_dqne6"]
size = Vector3(1, 5.04254, 4.55688)

[sub_resource type="BoxShape3D" id="BoxShape3D_e02xl"]
size = Vector3(1, 5.04254, 6.34302)

[sub_resource type="BoxShape3D" id="BoxShape3D_f7r33"]
size = Vector3(1, 5.04254, 5.58459)

[sub_resource type="BoxShape3D" id="BoxShape3D_se727"]
size = Vector3(1, 5.04254, 4.55688)

[sub_resource type="BoxMesh" id="BoxMesh_rgbah"]
size = Vector3(2.585, 3.665, 0.715)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_042kl"]
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4rhck"]
shader = ExtResource("7_fixyo")
shader_parameter/dither_intensity = 1.0
shader_parameter/color_depth = Vector3(4, 4, 4)

[node name="Opening-cutscene" type="Node3D"]
script = ExtResource("1_rdbbq")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_imyo1")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
collision_layer = 0
data = {
"cells": PackedInt32Array(0, 0, 5, 0, 65533, 5, 0, 65530, 5, 65535, 0, 655365, 65535, 65533, 655365, 65535, 65530, 655365, 65535, 65527, 655365, 65535, 65524, 655365, 0, 65524, 1, 0, 65527, 5, 2, 65522, 1441798, 65535, 65522, 655367, 65535, 65521, 1048576, 0, 65521, 1048583, 0, 65522, 1441794, 2, 65521, 1048581, 5, 65521, 1048581, 5, 65522, 1441797, 7, 65522, 1441792, 7, 65521, 0, 0, 2, 1441792, 65535, 2, 655360)
}

[node name="Rocks" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1454, 0)

[node name="COVER_ROCK" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.935909, 0.0504674, 0.348607, -0.33969, -0.132515, 0.931155, 0.0931885, -0.989895, -0.106878, -0.172229, 3.76102, -6.92477)
freeze = true

[node name="rock_small" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(1, 0, 0, 0, -0.0898156, -0.995958, 0, 0.995958, -0.0898156, 0.166715, 14.3541, -14.0186)

[node name="rock_medium" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.726743, -0.68691, 0, 0.68691, 0.726743, 0, 0, 0, 1, 0.663427, 10.2369, -12.4362)

[node name="rock_medium5" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.726743, -0.68691, 0, 0.68691, 0.726743, 0, 0, 0, 1, 3.42362, 6.53434, -15.0299)

[node name="rock_medium3" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.726743, -0.68691, 0, 0.68691, 0.726743, 0, 0, 0, 1, -1.82602, 11.7919, -12.4362)

[node name="rock_small2" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(1, 0, 0, 0, -0.0898156, -0.995958, 0, 0.995958, -0.0898156, -0.649218, 13.9473, -14.0186)

[node name="rock_small4" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(0.506094, -0.858993, 0.077464, 0, -0.0898156, -0.995959, 0.862478, 0.504049, -0.0454551, -0.0347823, 16.5844, -13.6667)

[node name="rock_small5" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(0.506094, -0.858993, 0.077464, 0, -0.0898156, -0.995959, 0.862478, 0.504049, -0.0454551, -0.447721, 16.1776, -14.3705)

[node name="rock_small6" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(0.506094, -0.858993, 0.077464, 0, -0.0898156, -0.995959, 0.862478, 0.504049, -0.0454551, -0.0347823, 18.1802, -12.6648)

[node name="rock_small7" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(0.506094, -0.858993, 0.077464, 0, -0.0898156, -0.995959, 0.862478, 0.504049, -0.0454551, -0.447721, 17.7734, -13.3686)

[node name="rock_medium2" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.747056, 0.664761, 0, -0.664761, 0.747056, 0, 0, 0, 1, -0.700463, 6.75274, -13.6674)

[node name="rock_medium4" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.747056, 0.664761, 0, -0.664761, 0.747056, 0, 0, 0, 1, -3.01101, 8.72213, -13.6674)

[node name="rock_medium6" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.747056, 0.664761, 0, -0.664761, 0.747056, 0, 0, 0, 1, 0.0783696, 8.74212, -15.1611)

[node name="rock_medium7" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.747056, 0.664761, 0, -0.664761, 0.747056, 0, 0, 0, 1, 0.0783696, 11.1543, -15.1611)

[node name="rock_medium8" parent="Rocks" instance=ExtResource("5_s85qx")]
transform = Transform3D(0.747056, 0.664761, 0, -0.664761, 0.747056, 0, 0, 0, 1, -1.07323, 13.1326, -15.1611)

[node name="rock_small3" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(0.185769, -0.978622, 0.0882522, 0, -0.0898156, -0.995958, 0.982593, 0.185019, -0.016685, 0.082791, 2.46368, -12.4443)

[node name="rock_small8" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(0.185769, -0.978622, 0.0882522, 0, -0.0898156, -0.995958, 0.982593, 0.185019, -0.016685, 1.45561, 4.3833, -14.0877)

[node name="rock_small9" parent="Rocks" instance=ExtResource("4_eblk8")]
transform = Transform3D(0.185769, -0.978622, 0.0882522, 0, -0.0898156, -0.995958, 0.982593, 0.185019, -0.016685, 1.45561, 4.3833, -14.8819)

[node name="light" parent="." instance=ExtResource("3_yyurr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.69545, 0)

[node name="light2" parent="." instance=ExtResource("3_yyurr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.69545, -13.9884)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999138, 0, -0.0415095, 0, 1, 0, 0.0415095, 0, 0.999138, -0.252243, 2.18539, 1.01431)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.520752, -0.250244, -9.43734)
shape = SubResource("BoxShape3D_tlgdr")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.520752, 1.07333, -6.21515)
shape = SubResource("BoxShape3D_fai6q")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.87192, 1.40535, -7.79686)
shape = SubResource("BoxShape3D_f8i6y")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9581, 1.40535, -15.7977)
shape = SubResource("BoxShape3D_1fgci")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.79643, 1.40535, -9.15276)
shape = SubResource("BoxShape3D_238e8")

[node name="RockBarrier" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.135398, 1, 0)
collision_layer = 2
collision_mask = 2
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="RockBarrier"]
transform = Transform3D(0.802453, 0.596715, 0, -0.596715, 0.802453, 0, 0, 0, 1, 2.23422, 5.18198, -11.4729)
shape = SubResource("BoxShape3D_i8atr")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="RockBarrier"]
transform = Transform3D(0.676105, -0.736806, 0, 0.736806, 0.676105, 0, 0, 0, 1, -2.21653, 4.7841, -12.4249)
shape = SubResource("BoxShape3D_dqne6")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="RockBarrier"]
transform = Transform3D(-2.95535e-08, 3.22068e-08, -1, 0.368465, 0.929642, 1.90513e-08, 0.929642, -0.368465, -3.93412e-08, 2.30354, 6.04518, -16.3387)
shape = SubResource("BoxShape3D_e02xl")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="RockBarrier"]
transform = Transform3D(-2.95535e-08, 3.22068e-08, -1, -0.543717, 0.839269, 4.30989e-08, 0.839269, 0.543717, -7.29195e-09, 2.68275, 6.04518, -12.5551)
shape = SubResource("BoxShape3D_f7r33")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="RockBarrier"]
transform = Transform3D(1.10825e-07, -6.4419e-08, 1, 0.368465, 0.929642, 1.90513e-08, -0.929642, 0.368465, 1.26764e-07, -0.0199389, 6.04518, -9.33528)
shape = SubResource("BoxShape3D_se727")

[node name="Cover" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75354, -7.16949)
visible = false
mesh = SubResource("BoxMesh_rgbah")
surface_material_override/0 = SubResource("StandardMaterial3D_042kl")

[node name="OpeningAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_decgf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_4rhck")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
